# pytbind11_openmp

./: CMakeLists.txt  setup.py
lib/Matrix/: Generator.hpp  Matrix.hpp
src/pybind11_openmp/: main.cpp
test/: test.py
